<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_name" />


        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_4dp">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>


    </LinearLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />


        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_4dp">

            <!-- Product Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />
        </LinearLayout>


    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_quantity" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingLeft="@dimen/padding_4dp"
                tools:ignore="NestedWeights,UselessParent">

                <Button
                    android:id="@+id/buttonIncrement"
                    android:layout_width="@dimen/editorActivitySmallButton"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="buttonIncrement"
                    android:text="@string/buttonIncrementText" />

                <Button
                    android:id="@+id/buttonDecrement"
                    android:layout_width="@dimen/editorActivitySmallButton"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/buttonIncrement"
                    android:enabled="false"
                    android:onClick="buttonDecrement"
                    android:text="@string/buttonDecrementText" />


                <FrameLayout
                    android:layout_width="@dimen/editorActivityQuantityEditTextWidth"
                    android:layout_height="wrap_content">

                    <!-- Product Quantity field -->
                    <EditText
                        android:id="@+id/edit_text_product_quantity"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_product_quantity"
                        android:inputType="number" />
                </FrameLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_4dp">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_text_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_phone" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_4dp">

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_text_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonOrderItems"
        android:layout_width="@dimen/editorActivityLargeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="callSupplier"
        android:text="@string/order_more"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buttonDeleteItem"
        android:layout_width="@dimen/editorActivityLargeButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="deleteEntry"
        android:text="@string/delete_entry"
        android:textAllCaps="true" />

</LinearLayout>
